test/should-fail/jfxc2278Sub.fx
/**
 * @subtest jfxc2278.fx
 */

package class jfxc2278Sub {
  public var x;
  protected function y() {};
}
